--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -64,19 +64,19 @@
 
         <div class="field">
             <label for="paramGameName">Nom de la Partie</label>
-            <textarea name="paramGame" id="name"></textarea>
+            <textarea name="paramGame" id="name" style="height: 0px; width: 200px;"></textarea>
         </div>
 
         <div class="field">
             <label for="paramGameTps">Temps Partie</label>
-            <textarea name="paramGame" id="tps"></textarea>
+            <textarea name="paramGame" id="tps" style="height: 0px; width: 200px;"></textarea>
         </div>
 
         <div class="field">
             <label for="paramGameNbPlayer">Nombre de Joueurs</label>
-            <textarea name="paramGame" id="nbPlayer"></textarea>
+            <textarea name="paramGame" id="nbPlayer" style="height: 0px; width: 200px;"></textarea>
         </div>
-
+        
 
         <button type="submit" class="ui blue labeled submit icon button">
 
