multipage + load + affi + create user

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -25,110 +25,9 @@
 <div class="ui fixed inverted menu">
 
 <a href = "/" class = "header item" > Killer </a>
-<a href= "/" class="header item"> Nouveau profil </a>
+<a href= "/register" class="header item"> Nouveau profil </a>
+<a href= "/create" class="header item"> Create Game </a>
+<a href= "/load" class="header item"> Load Game </a>
 
-</div>
-
-<div class="ui main container">
-
-<!-- ----------------------------------------------------------------------- -->
-<!--                              Message flash                              -->
-<!-- ----------------------------------------------------------------------- -->
-
-<% if(locals.flash && locals.flash.error){ %>
-
-    <div class="ui negative message">
-
-        <%= flash.error %>
-
-    </div>
-
-<% } %>
-
-<% if(locals.flash && locals.flash.success){ %>
-
-    <div class="ui positive message">
-    
-        <%= flash.success %>
-    
-    </div>
-    
-<% } %>
-
-
-<!-- ----------------------------------------------------------------------- -->
-<!--                                Create Game                              -->
-<!-- ----------------------------------------------------------------------- -->
-
-<% if((paramGame === '' || paramGame === undefined) && mode != "load" && mode != "create") { %>
-
-    <form action="/" method="post" class="ui form">
-
-        <div class="field">
-            <label for="paramGameName">Nom de la Partie</label>
-            <textarea name="paramGame" id="name" style="height: 0px; width: 200px;"></textarea>
-        </div>
-        
-        <button type="submit" class="ui blue labeled submit icon button">
-
-            <i class="icon edit"></i>Envoyer
-
-        </button>
-
-    </form>
-<% } %>
-
-<% if(mode == "create"){ %>
-    <form action="/create" method="post" class="ui form">
-
-        <div class="field">
-            <label for="paramGameName">Nom de la Partie</label>
-            <textarea  placeholder= <%= gameName %>
-                        name="paramGame" id="name" style="height: 0px; width: 200px;"></textarea>
-        </div>
-
-        <div class="field">
-            <label for="paramGameTps">Temps Partie</label>
-            <textarea name="paramGame" id="tps" style="height: 0px; width: 200px;"></textarea>
-        </div>
-
-        <div class="field">
-            <label for="paramGameNbPlayer">Nombre de Joueurs</label>
-            <textarea name="paramGame" id="nbPlayer" style="height: 0px; width: 200px;"></textarea>
-        </div>
-        
-
-        <button type="submit" class="ui blue labeled submit icon button">
-
-            <i class="icon edit"></i>Envoyer
-
-        </button>
-
-    </form>
-<% } %>
-
-<!-- ----------------------------------------------------------------------- -->
-<!--                                Affi game                                -->
-<!-- ----------------------------------------------------------------------- -->
-
-<% if(mode === "load") { %>
-    <div class="ui comments">
-    
-        <h3 class="ui dividing header"> Information Game </h3>
-        
-        <div class="comment">
-
-            <div class="content">
-
-                <p> <%= "Nom de la partie : " + paramGame.name %> </p> 
-                <p> <%= "Durée de la partie : " + paramGame.end_date + " h" %> </p> 
-                <p> <%= "Nombre de Joueurs : " + paramGame.nbPlayer %> </p> 
-
-            </div>
-
-        </div>
-
-    </div>
-<% } %>
 
 <% include ('footer') %>
