--- a/views/pages/init.ejs
+++ b/views/pages/init.ejs
@@ -60,22 +60,22 @@
 <% } %>
 
 <!-- ----------------------------------------------------------------------- -->
-<!--                                ask game                                 -->
+<!--                                Init                                -->
 <!-- ----------------------------------------------------------------------- -->
 
-    <form action="/load" method="post" class="ui form">
+<form action="/init" method="post" class="ui form">
 
         <div class="field">
-            <label for="paramGameName">Nom de la Partie</label>
-            <textarea name="paramGame" id="name" style="height: 0px; width: 200px;"></textarea>
+            <label for="nameOfPlayer">Nom du joueur <%= nbAdd %></label>
+            <textarea name="nameOfPlayer" id="name" style="height: 0px; width: 200px;"></textarea>
         </div>
         
-        <button type="submit" class="ui blue labeled submit icon button">
+    <button type="submit" class="ui blue labeled submit icon button">
 
-            <i class="icon edit"></i>Envoyer
+        <i class="icon edit"></i>Envoyer
 
-        </button>
+    </button>
 
-    </form>
+</form>
 
 <% include ('footer') %>
