--- a/views/pages/header.ejs
+++ b/views/pages/header.ejs
@@ -1,4 +1,4 @@
-<<!-- ----------------------------------------------------------------------- -->
+<!-- ----------------------------------------------------------------------- -->
 <!--                                 header                                  -->
 <!-- ----------------------------------------------------------------------- -->
 
@@ -29,12 +29,12 @@
 <a href= "/create" class="header item"> Create Game </a>
 <a href= "/load" class="header item"> Load Game </a>
 
-
-
 </div>
 
-<div class="ui main container">
+<div class="ui main container"></div>
 
+<div class="ui comments">
+    
 <!-- ----------------------------------------------------------------------- -->
 <!--                              Message flash                              -->
 <!-- ----------------------------------------------------------------------- -->
@@ -57,25 +57,6 @@
     
     </div>
     
-<% } %>>
+<% } %>
 
-<!-- ----------------------------------------------------------------------- -->
-<!--                                Init                                -->
-<!-- ----------------------------------------------------------------------- -->
-
-<form action="/init" method="post" class="ui form">
-
-        <div class="field">
-            <label for="nameOfPlayer">Nom du joueur <%= nbAdd %></label>
-            <textarea name="nameOfPlayer" id="name" style="height: 0px; width: 200px;"></textarea>
-        </div>
-        
-    <button type="submit" class="ui blue labeled submit icon button">
-
-        <i class="icon edit"></i>Envoyer
-
-    </button>
-
-</form>
-
-<% include ('footer') %>
+</div>
