--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,63 +1,4 @@
-<!-- ----------------------------------------------------------------------- -->
-<!--                                 header                                  -->
-<!-- ----------------------------------------------------------------------- -->
+<% include ('header') %>
 
-<!DOCTYPE html>
-<html>
-<head>
 
-    <title> AshGames_Killer </title>
-
-    <link rel="stylesheet" href="/assets/semantic/semantic.min.css">
-
-    <style>
-
-        .main.container{
-            margin-top: 7em;
-        }
-
-    </style>
-    
-</head>
-
-<body>
-
-<div class="ui fixed inverted menu">
-
-<a href = "/" class = "header item" > Killer </a>
-<a href= "/register" class="header item"> Nouveau profil </a>
-<a href= "/create" class="header item"> Create Game </a>
-<a href= "/load" class="header item"> Load Game </a>
-
-</div>
-
-<div class="ui main container"></div>
-
-<div class="ui comments">
-    
-<!-- ----------------------------------------------------------------------- -->
-<!--                              Message flash                              -->
-<!-- ----------------------------------------------------------------------- -->
-
-<% if(locals.flash && locals.flash.error){ %>
-
-    <div class="ui negative message">
-
-        <%= flash.error %>
-
-    </div>
-
-<% } %>
-
-<% if(locals.flash && locals.flash.success){ %>
-
-    <div class="ui positive message">
-    
-        <%= flash.success %>
-    
-    </div>
-    
-<% } %>
-
-</div>
 <% include ('footer') %>
