--- a/views/pages/register.ejs
+++ b/views/pages/register.ejs
@@ -25,6 +25,7 @@
 <div class="ui fixed inverted menu">
 
 <a href = "/" class = "header item" > Killer </a>
+<a href= "/login" class="header item"> Connection </a>
 <a href= "/register" class="header item"> Nouveau profil </a>
 <a href= "/create" class="header item"> Create Game </a>
 <a href= "/load" class="header item"> Load Game </a>
@@ -58,7 +59,7 @@
 <% } %>
 
 <!-- ----------------------------------------------------------------------- -->
-<!--                                ask game                                 -->
+<!--                                register                                 -->
 <!-- ----------------------------------------------------------------------- -->
 
     <form action="/register" method="post" class="ui form">
