--- a/views/pages/init.ejs
+++ b/views/pages/init.ejs
@@ -1,4 +1,4 @@
-<<!-- ----------------------------------------------------------------------- -->
+<!-- ----------------------------------------------------------------------- -->
 <!--                                 header                                  -->
 <!-- ----------------------------------------------------------------------- -->
 
@@ -25,6 +25,7 @@
 <div class="ui fixed inverted menu">
 
 <a href = "/" class = "header item" > Killer </a>
+<a href= "/login" class="header item"> Connection </a>
 <a href= "/register" class="header item"> Nouveau profil </a>
 <a href= "/create" class="header item"> Create Game </a>
 <a href= "/load" class="header item"> Load Game </a>
