--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,10 +25,10 @@
 <div class="ui fixed inverted menu">
 
 <a href = "/" class = "header item" > Killer </a>
-<a href= "/login" class="header item"> Connection </a>
-<a href= "/register" class="header item"> Nouveau profil </a>
-<a href= "/create" class="header item"> Create Game </a>
-<a href= "/load" class="header item"> Load Game </a>
+<a href= "/auth/login" class="header item"> Connection </a>
+<a href= "/auth/register" class="header item"> Nouveau profil </a>
+<a href= "/game/create" class="header item"> Create Game </a>
+<a href= "/game/load" class="header item"> Load Game </a>
 
 </div>
 
