--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -24,11 +24,11 @@
 
 <div class="ui fixed inverted menu">
 
-<a href = "/" class = "header item" > Killer </a>
-<a href= "/login" class="header item"> Connection </a>
-<a href= "/register" class="header item"> Nouveau profil </a>
-<a href= "/create" class="header item"> Create Game </a>
-<a href= "/load" class="header item"> Load Game </a>
+    <a href = "/" class = "header item" > Killer </a>
+    <a href= "/auth/login" class="header item"> Connection </a>
+    <a href= "/auth/register" class="header item"> Nouveau profil </a>
+    <a href= "/game/create" class="header item"> Create Game </a>
+    <a href= "/game/load" class="header item"> Load Game </a>
 
 </div>
 
@@ -62,7 +62,7 @@
 <!--                                register                                 -->
 <!-- ----------------------------------------------------------------------- -->
 
-<form action="/login" method="post" class="ui form">
+<form action="/auth/login" method="post" class="ui form">
 
     <div class="field">
         <label for="loginPlayer"> Username </label>
@@ -82,4 +82,4 @@
 
 </form>
 
-<% include ('footer') %>
+<% include ('../footer.ejs') %>
