--- a/views/game/create.ejs
+++ b/views/game/create.ejs
@@ -24,13 +24,11 @@
 
 <div class="ui fixed inverted menu">
 
-<a href = "/" class = "header item" > Killer </a>
-<a href= "/login" class="header item"> Connection </a>
-<a href= "/register" class="header item"> Nouveau profil </a>
-<a href= "/create" class="header item"> Create Game </a>
-<a href= "/load" class="header item"> Load Game </a>
-
-
+    <a href = "/" class = "header item" > Killer </a>
+    <a href= "/auth/login" class="header item"> Connection </a>
+    <a href= "/auth/register" class="header item"> Nouveau profil </a>
+    <a href= "/game/create" class="header item"> Create Game </a>
+    <a href= "/game/load" class="header item"> Load Game </a>
 
 </div>
 
@@ -58,25 +56,37 @@
     
     </div>
     
-<% } %>>
+<% } %>
 
 <!-- ----------------------------------------------------------------------- -->
-<!--                                Init                                -->
+<!--                                Create Game                              -->
 <!-- ----------------------------------------------------------------------- -->
 
-<form action="/init" method="post" class="ui form">
+    <form action="/game/create" method="post" class="ui form">
 
         <div class="field">
-            <label for="nameOfPlayer">Nom du joueur <%= nbAdd %></label>
-            <textarea name="nameOfPlayer" id="name" style="height: 0px; width: 200px;"></textarea>
+            <label for="paramGameName">Nom de la Partie</label>
+            <textarea name="paramGame" id="name" style="height: 0px; width: 200px;"></textarea>
+        </div>
+
+        <div class="field">
+            <label for="paramGameTps">Temps Partie</label>
+            <textarea name="paramGame" id="tps" style="height: 0px; width: 200px;"></textarea>
+        </div>
+
+        <div class="field">
+            <label for="paramGameNbPlayer">Nombre de Joueurs</label>
+            <textarea name="paramGame" id="nbPlayer" style="height: 0px; width: 200px;"></textarea>
         </div>
         
-    <button type="submit" class="ui blue labeled submit icon button">
 
-        <i class="icon edit"></i>Envoyer
+        <button type="submit" class="ui blue labeled submit icon button">
 
-    </button>
+            <i class="icon edit"></i>Envoyer
 
-</form>
+        </button>
 
-<% include ('footer') %>
+    </form>
+
+
+    <% include ('../footer.ejs') %>
