--- a/views/game/display.ejs
+++ b/views/game/display.ejs
@@ -24,13 +24,11 @@
 
 <div class="ui fixed inverted menu">
 
-<a href = "/" class = "header item" > Killer </a>
-<a href= "/login" class="header item"> Connection </a>
-<a href= "/register" class="header item"> Nouveau profil </a>
-<a href= "/create" class="header item"> Create Game </a>
-<a href= "/load" class="header item"> Load Game </a>
-
-
+    <a href = "/" class = "header item" > Killer </a>
+    <a href= "/auth/login" class="header item"> Connection </a>
+    <a href= "/auth/register" class="header item"> Nouveau profil </a>
+    <a href= "/game/create" class="header item"> Create Game </a>
+    <a href= "/game/load" class="header item"> Load Game </a>
 
 </div>
 
@@ -92,7 +90,7 @@
     </div>
 
     <%if(gameRunning == true){%>
-        <form action="/affi" method="post" class="ui form">
+        <form action="/game/display" method="post" class="ui form">
 
             <div class="field">
                 <label for="mort">Quel Joueur a été tué</label>
@@ -108,4 +106,4 @@
         </form>
     <%}%>
 
-<% include ('footer') %>
+    <% include ('../footer.ejs') %>
