add auto le premier joueur + h1

--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -59,8 +59,10 @@
 <% } %>
 
 <!-- ----------------------------------------------------------------------- -->
-<!--                                register                                 -->
+<!--                                login                                    -->
 <!-- ----------------------------------------------------------------------- -->
+
+<h1> Login </h1>
 
 <form action="/auth/login" method="post" class="ui form">
 
