--- a/views/auth/register.ejs
+++ b/views/auth/register.ejs
@@ -62,6 +62,8 @@
 <!--                                register                                 -->
 <!-- ----------------------------------------------------------------------- -->
 
+<h1> Register </h1>
+
     <form action="/auth/register" method="post" class="ui form">
 
         <div class="field">
