--- a/views/game/create.ejs
+++ b/views/game/create.ejs
@@ -62,6 +62,8 @@
 <!--                                Create Game                              -->
 <!-- ----------------------------------------------------------------------- -->
 
+<h1> Create Game </h1>
+
     <form action="/game/create" method="post" class="ui form">
 
         <div class="field">
