--- a/views/game/display.ejs
+++ b/views/game/display.ejs
@@ -62,6 +62,7 @@
 <!--                                Affi game                                -->
 <!-- ----------------------------------------------------------------------- -->
 
+<h1> Display Game </h1>
 
     <div class="ui comments">
     
