--- a/views/game/init.ejs
+++ b/views/game/init.ejs
@@ -62,6 +62,8 @@
 <!--                                Init                                -->
 <!-- ----------------------------------------------------------------------- -->
 
+<h1> Init Game </h1>
+
 <form action="/game/init" method="post" class="ui form">
 
         <div class="field">
