--- a/views/game/load.ejs
+++ b/views/game/load.ejs
@@ -62,6 +62,8 @@
 <!--                                ask game                                 -->
 <!-- ----------------------------------------------------------------------- -->
 
+<h1> Load Game </h1>
+
     <form action="/game/load" method="post" class="ui form">
 
         <div class="field">
