affi l'ecran pour un seul joueur

--- a/views/game/display.ejs
+++ b/views/game/display.ejs
@@ -25,8 +25,6 @@
 <div class="ui fixed inverted menu">
 
     <a href = "/" class = "header item" > Killer </a>
-    <a href= "/auth/login" class="header item"> Connection </a>
-    <a href= "/auth/register" class="header item"> Nouveau profil </a>
     <a href= "/game/create" class="header item"> Create Game </a>
     <a href= "/game/load" class="header item"> Load Game </a>
 
@@ -85,8 +83,14 @@
             <p></p>
 
             <% for (var i = 0; i < game.nbPlayer;  i++ ) { %>
-                <p>  ID :  <%=game.TableInGame[i].idPlayer%> - <%=game.TableInGame[i].name%> - Mission : <%=game.TableInGame[i].mission%> - Status : <%=game.TableInGame[i].status%> - Target : <%=game.TableInGame[i].target%> - Kill : <%=game.TableInGame[i].nbKill %>;  
+                <p>  ID :  <%=game.TableInGame[i].idPlayer%> - <%=game.TableInGame[i].name%> - Mission : <%=game.TableInGame[i].mission%> - Kill : <%=game.TableInGame[i].nbKill %> - Status : <%=game.TableInGame[i].status%> - Target : <%=game.TableInGame[i].target%>  
             <% } %>
+            
+            <h3> You </h3>
+                <p>  <%=game.TableInGame[mainPlayer].name%> - Kill : <%=game.TableInGame[mainPlayer].nbKill %> - Status : <%=game.TableInGame[mainPlayer].status%> - Target : <%=game.TableInGame[mainPlayer].target%> 
+
+            <h3> Your Target </h3>
+                <p>   <%=game.TableInGame[targetPlayer].name%> - Mission : <%=game.TableInGame[targetPlayer].mission%> 
             
         </div>
 
