--- a/views/auth/register.ejs
+++ b/views/auth/register.ejs
@@ -25,11 +25,17 @@
 <div class="ui fixed inverted menu">
 
     <a href = "/" class = "header item" > Killer </a>
-    <a href= "/auth/login" class="header item"> Connection </a>
-    <a href= "/auth/register" class="header item"> Nouveau profil </a>
-    <a href= "/game/create" class="header item"> Create Game </a>
-    <a href= "/game/load" class="header item"> Load Game </a>
 
+    <% if(data == false){ %>
+        <a href= "/auth/login" class="header item"> Connection </a>
+        <a href= "/auth/register" class="header item"> Nouveau profil </a>
+    <%}%>
+
+    <% if(data == true){ %>
+        <a href= "/game/create" class="header item"> Create Game </a>
+        <a href= "/game/load" class="header item"> Load Game </a>
+    <%}%>
+    
 </div>
 
 <div class="ui main container">
