--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,19 +24,20 @@
 
 <div class="ui fixed inverted menu">
 
-<a href = "/" class = "header item" > Killer </a>
-<a href= "/auth/login" class="header item"> Connection </a>
-<a href= "/auth/register" class="header item"> Nouveau profil </a>
-<a href= "/game/create" class="header item"> Create Game </a>
-<a href= "/game/load" class="header item"> Load Game </a>
+    <a href = "/" class = "header item" > Killer </a>
 
+    <% if(data.user == undefined || data.user == ''){ %>
+        <a href= "/auth/login" class="header item"> Connection </a>
+        <a href= "/auth/register" class="header item"> Nouveau profil </a>
+    <%} else { %>
+        <a href= "/game/create" class="header item"> Create Game </a>
+        <a href= "/game/load" class="header item"> Load Game </a>
+    <%}%>
 </div>
 
 <div class="ui main container"></div>
 
 <h1>  Home Page </h1>
-
-<div class="ui comments">
 
 <!-- ----------------------------------------------------------------------- -->
 <!--                              Message flash                              -->
@@ -61,7 +62,5 @@
     </div>
     
 <% } %>
-
-</div>
 
 <% include ('footer') %>
