--- a/views/game/endScreen.ejs
+++ b/views/game/endScreen.ejs
@@ -32,7 +32,7 @@
 
 <div class="ui main container">
 
-<h1> Display Game </h1>
+<h1> Display End of Game </h1>
 
 <!-- ----------------------------------------------------------------------- -->
 <!--                              Message flash                              -->
@@ -75,39 +75,15 @@
             <p> <%= "Nombre de Joueurs : " + game.nbPlayer %> </p> 
 
             <p></p>
-     
-            
-            <!-- Dev
+        
+            <p> <%= "Winner => " + game.winner %> </p>
+
             <% for (var i = 0; i < game.nbPlayer;  i++ ) { %>
-                <p>  ID :  <%=game.TableInGame[i].idPlayer%> - <%=game.TableInGame[i].name%> - Mission : <%=game.TableInGame[i].mission%> - Kill : <%=game.TableInGame[i].nbKill %> - Status : <%=game.TableInGame[i].status%> - Target : <%=game.TableInGame[i].target%>  
+                <p> <%=game.TableInGame[i].name%> - Mission : <%=game.TableInGame[i].mission%> - Kill : <%=game.TableInGame[i].nbKill %> - Status : <%=game.TableInGame[i].status%> - Target : <%=game.TableInGame[i].target%>  
             <% } %>
-            -->
-
-            <h3> You </h3>
-                <p>  <%=game.TableInGame[mainPlayer].name%> - Kill : <%=game.TableInGame[mainPlayer].nbKill %> - Status : <%=game.TableInGame[mainPlayer].status%> 
-
-            <h3> Your Target </h3>
-                <p>   <%=game.TableInGame[targetPlayer].name%> - Mission : <%=game.TableInGame[targetPlayer].mission%> 
 
         </div>
 
     </div>
-
-    
-    <form action="/game/display" method="post" class="ui form">
-
-        <div class="field">
-            <label for="mort">Quel Joueur a été tué</label>
-            <textarea name="mort" id="mort" style="height: 0px; width: 200px;"></textarea>
-        </div>
-        
-        <button type="submit" class="ui blue labeled submit icon button">
-
-            <i class="icon edit"></i>Envoyer
-
-        </button>
-
-    </form>
-    
 
     <% include ('../footer.ejs') %>
