--- a/views/game/init.ejs
+++ b/views/game/init.ejs
@@ -25,6 +25,7 @@
 <div class="ui fixed inverted menu">
 
     <a href = "/" class = "header item" > Killer </a>
+    <a href= "/auth/disconnect" class="header item"> Disconnect </a>
     <a href= "/game/create" class="header item"> Create Game </a>
     <a href= "/game/load" class="header item"> Load Game </a>
 
