--- a/views/game/load.ejs
+++ b/views/game/load.ejs
@@ -25,8 +25,10 @@
 <div class="ui fixed inverted menu">
 
     <a href = "/" class = "header item" > Killer </a>
+    <a href= "/auth/disconnect" class="header item"> Disconnect </a>
     <a href= "/game/create" class="header item"> Create Game </a>
     <a href= "/game/load" class="header item"> Load Game </a>
+    
 
 </div>
 
@@ -64,18 +66,18 @@
 
     <form action="/game/load" method="post" class="ui form">
         
-        Liste des Parties en cours : 
-        
+        Liste des Parties en cours :
+
         <p></p>
-    
-        <% for (var i = 0; i < name.length;  i++ ) { %>
 
-        <button type="button" class="ui blue labeled submit icon button">
-            <i class="icon edit"></i> <%= name[i] %> 
-        </button>
-
+        <% for (var i = 0; i < name.length; i++) { %>
+            <button type="submit" class="ui blue labeled submit icon button game-button" name="gameName" value="<%= name[i] %>">
+                <i class="icon edit"></i> <%= name[i] %> 
+            </button>
         <% } %>
 
     </form>
+
+
 
     <% include ('../footer.ejs') %>
