--- a/views/index.ejs
+++ b/views/index.ejs
@@ -30,6 +30,7 @@
         <a href= "/auth/login" class="header item"> Connection </a>
         <a href= "/auth/register" class="header item"> Nouveau profil </a>
     <%} else { %>
+        <a href= "/auth/disconnect" class="header item"> Disconnect </a>
         <a href= "/game/create" class="header item"> Create Game </a>
         <a href= "/game/load" class="header item"> Load Game </a>
     <%}%>
