--- a/views/game/load.ejs
+++ b/views/game/load.ejs
@@ -26,6 +26,7 @@
 
     <a href = "/" class = "header item" > Killer </a>
     <a href= "/auth/disconnect" class="header item"> Disconnect </a>
+    <a href= "/friend" class="header item"> Friend </a>
     <a href= "/game/create" class="header item"> Create Game </a>
     <a href= "/game/load" class="header item"> Load Game </a>
     
