--- a/views/index.ejs
+++ b/views/index.ejs
@@ -31,6 +31,7 @@
         <a href= "/auth/register" class="header item"> Nouveau profil </a>
     <%} else { %>
         <a href= "/auth/disconnect" class="header item"> Disconnect </a>
+        <a href= "/friend" class="header item"> Friend </a>
         <a href= "/game/create" class="header item"> Create Game </a>
         <a href= "/game/load" class="header item"> Load Game </a>
     <%}%>
